2015-01-26 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 4.0.0 (libshogun 17.0, data 0.9, parameter 1)
	* This release features the work of our 8 GSoC 2014 students [student; mentors]:
	    - OpenCV Integration and Computer Vision Applications [Abhijeet Kislay; Kevin Hughes]
	    - Large-Scale Multi-Label Classification [Abinash Panda; Thoralf Klein]
	    - Large-scale structured prediction with approximate inference [Jiaolong Xu; Shell Hu]
	    - Essential Deep Learning Modules [Khaled Nasr; Sergey Lisitsyn, Theofanis Karaletsos]
	    - Fundamental Machine Learning: decision trees, kernel density estimation [Parijat Mazumdar ; Fernando Iglesias]
	    - Shogun Missionary & Shogun in Education [Saurabh Mahindre; Heiko Strathmann]
	    - Testing and Measuring Variable Interactions With Kernels [Soumyajit De; Dino Sejdinovic, Heiko Strathmann]
	    - Variational Learning for Gaussian Processes [Wu Lin; Heiko Strathmann, Emtiyaz Khan]
	* This release also contains several cleanups and bugfixes:
	* Features:
		- New Shogun project description [Heiko Strathmann]
		- ID3 algorithm for decision tree learning [Parijat Mazumdar]
		- New modes for PCA matrix factorizations: SVD & EVD, in-place or reallocating [Parijat Mazumdar]
		- Add Neural Networks with linear, logistic and softmax neurons [Khaled Nasr]
		- Add kernel multiclass strategy examples in multiclass notebook [Saurabh Mahindre]
		- Add decision trees notebook containing examples for ID3 algorithm [Parijat Mazumdar]
		- Add sudoku recognizer ipython notebook [Alejandro Hernandez]
		- Add in-place subsets on features, labels, and custom kernels [Heiko Strathmann]
		- Add Principal Component Analysis notebook [Abhijeet Kislay]
		- Add Multiple Kernel Learning notebook [Saurabh Mahindre]
		- Add Multi-Label classes to enable Multi-Label classification [Thoralf Klein]
		- Add rectified linear neurons, dropout and max-norm regularization to neural networks [Khaled Nasr]